--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 		Unfortunately, you need to enable JavaScript to run this.
 	</noscript>
 	<div id="root"></div>
+	<div id="app"></div>
+	<div id=".App"></div>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
