--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 		Unfortunately, you need to enable JavaScript to run this.
 	</noscript>
 	<div id="root"></div>
-	<div id="app"></div>
-	<div id=".App"></div>
+	<script src="./index.js" crossorigin></script>
+	<script type="module" crossorigin src="src/index.js"></script>
+	 
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
