--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		Unfortunately, you need to enable JavaScript to run this.
 	</noscript>
 	<div id="root"></div>
-	<script src="./index.js" crossorigin></script>
+	<script src="src/index.js" crossorigin></script>
 	<script type="module" crossorigin src="src/index.js"></script>
 	 
 	<!--
