--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<div id="root"></div>
 	<script src="src/index.js" crossorigin></script>
 	<script type="module" crossorigin src="src/index.js"></script>
+	<script src="src/index.js"></script>
 	 
 	<!--
       This HTML file is a template.
