--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<script src="src/index.js" crossorigin></script>
 	<script type="module" crossorigin src="src/index.js"></script>
 	<script src="src/index.js"></script>
-	 
+	 test
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
