--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	<script src="src/index.js" crossorigin></script>
 	<script type="module" crossorigin src="src/index.js"></script>
 	<script src="src/index.js"></script>
+	 <a href="#" id="soundbutton">Press</a>
+	<script type="text/javascript" src="test.js"></script>
 	 test
 	<!--
       This HTML file is a template.
