--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<script type="module" crossorigin src="src/index.js"></script>
 	<script src="src/index.js"></script>
 	 <a href="#" id="soundbutton">Press</a>
+	<button type="button">test 2</button>
 	<script type="text/javascript" src="test.js"></script>
 	 test
 	<!--
