--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	 <a href="#" id="soundbutton">Press</a>
 	<button type="button">test 2</button>
 	<script type="text/javascript" src="test.js"></script>
+	<input id="clickMe" type="button" value="clickme3" onclick="playSound();" />
 	 test
 	<!--
       This HTML file is a template.
